# 2022-II

./: .ignore  CMakeLists.txt  README.md
2023-0_practice_fiestas/S1_Introduction/: lab1.cpp  lab2.cpp  main.cpp
2023-0_practice_fiestas/S2/: teo.cpp
C++ course/: Ejercicio Expresiones 1.cpp  Ejercicio Expresiones 2.cpp  Ejercicio Intercambio de valores entre 2 variables.cpp  Hola mundo.cpp  Lectura o entrada de datos.cpp  Operaciones aritméticas.cpp  Pedir datos e imprimir.cpp  Raíz y elevación.cpp  Tipos de datos.cpp  s1.cpp
Cpp_course/: Ejercicio Expresiones 1.cpp  Ejercicio Intercambio de valores entre 2 variables.cpp  Ejercicio_Expresiones_2.cpp  Hola mundo.cpp  Lectura o entrada de datos.cpp  Operaciones aritméticas.cpp  Pedir datos e imprimir.cpp  Raíz y elevación.cpp  Tipos de datos.cpp  s1.cpp
Programación II/Teoría 4/S1/: codes.cpp
Proyecto Banco/: main.cpp
mentoria_python/sesion_1/: codigos.py
progra-II/lab-102/s1/: funciones.cpp  funciones.h  labs1.cpp  main_funciones.cpp  ticket.cpp
progra-II/lab-102/s10/: Game.cpp  Game.h  Image.cpp  Image.h  ejemplo3.cpp
progra-II/lab-102/s15/: Actuator.h  Body.h  Enviroment.h  Lake.h  Sea.h  Sensor.h  Type.h  Vision.h  ejemplo1.cpp
progra-II/others/: Asesoría.cpp  Figuras.cpp  UFunciones.cpp  UFunciones.h  evaluation.cpp  hilda.cpp  quiz4.cpp  valerypc1.cpp
proyecto_banco/: Banco.cpp  Banco.h  Cliente.h  CuentadeAhorro.h  CuentadeCredito.h  Cuentas.h  Menu.h  Servicios.h  Tarjeta.h  TarjetadeCredito.h  TarjetadeDebito.h  Tarjetas.h  funciones.h  main.cpp
sesion_5/: codes.py  hola_mundo.cpp  test.cpp
(+141 files in other folders)
