cmake_minimum_required(VERSION 3.23)
project(2022_II)

set(CMAKE_CXX_STANDARD 14)

add_executable(tarea3 progra-II/lab-102/s15/Tarea3/p2.cpp progra-II/lab-102/s15/Tarea3/Producto.h)

add_executable(ProyectAless proyecto_banco/Banco.cpp proyecto_banco/Cliente.h proyecto_banco/CuentadeAhorro.h proyecto_banco/CuentadeAhorro.h proyecto_banco/CuentadeCredito.h proyecto_banco/TarjetadeCredito.h)