cmake_minimum_required(VERSION 3.23)
project(2022_II)

set(CMAKE_CXX_STANDARD 14)

add_executable(Jenn sesion_5/hola_mundo.cpp progra-II/others/evaluation.cpp sesion_5/test.cpp)

add_executable(test sesion_5/test.cpp)

add_executable(ProyectAless proyecto_banco/Banco.cpp proyecto_banco/Cliente.h proyecto_banco/CuentadeAhorro.h proyecto_banco/CuentadeAhorro.h proyecto_banco/CuentadeCredito.h proyecto_banco/TarjetadeCredito.h proyecto_banco/funciones.h proyecto_banco/Servicios.h proyecto_banco/Banco.h proyecto_banco/main.cpp)

add_executable(practice 2023-0_practice_fiestas/Teo/S1_Introduction/main.cpp)